--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <div id="status">Vui lòng chờ trong giây lát...</div>
 
   <script>
+    const params = new URLSearchParams(window.location.search);
+    const filters = params.get("filters");
+    console.log("filters:", filters);
     async function callFlow() {
       document.getElementById("status").textContent = "🚀 Gửi yêu cầu tới hệ thống...";
 
@@ -34,7 +37,7 @@
         const response = await fetch("https://prod-43.southeastasia.logic.azure.com:443/workflows/1649ab51f4154bdd9ae6d13f340786bf/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=U784B54C0Wa-1mGpqN4lkwN_oEY1X6v61KmtLff0t6s", {
           method: "GET",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ "source": "Power BI" }) // tuỳ chọn
+          body: JSON.stringify({ "filters": filters }) // tuỳ chọn
         });
 
         if (!response.ok) throw new Error("HTTP error " + response.status);
