--- a/index.html
+++ b/index.html
@@ -27,33 +27,34 @@
   <div id="status">Vui lòng chờ trong giây lát...</div>
 
   <script>
-    const params = new URLSearchParams(window.location.search);
-    const filters = params.get("filters");
-    console.log("filters:", filters);
-    async function callFlow() {
-      document.getElementById("status").textContent = "🚀 Gửi yêu cầu tới hệ thống...";
+  const params = new URLSearchParams(window.location.search);
+  const filters = params.get("filters");
+  console.log("filters:", filters);
 
-      try {
-        const response = await fetch("https://prod-43.southeastasia.logic.azure.com:443/workflows/1649ab51f4154bdd9ae6d13f340786bf/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=U784B54C0Wa-1mGpqN4lkwN_oEY1X6v61KmtLff0t6s", {
-          method: "GET",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ "filters": filters }) // tuỳ chọn
-        });
+  async function callFlow() {
+    document.getElementById("status").textContent = "🚀 Gửi yêu cầu tới hệ thống...";
 
-        if (!response.ok) throw new Error("HTTP error " + response.status);
-        const result = await response.json();
+    try {
+      const response = await fetch("https://prod-43.southeastasia.logic.azure.com:443/workflows/1649ab51f4154bdd9ae6d13f340786bf/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun%2F&sv=1.0&sig=YOUR_SIGNATURE_HERE", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ "filters": filters }) // tuỳ chọn
+      });
 
-        document.querySelector("h2").textContent = "✅ Hoàn tất!";
-        document.getElementById("status").textContent = result.message || "Yêu cầu đã được xử lý thành công.";
-        document.querySelector(".loader").style.display = "none";
-      } catch (error) {
-        document.querySelector("h2").textContent = "❌ Lỗi xảy ra";
-        document.getElementById("status").textContent = "Không thể xử lý yêu cầu: " + error;
-        document.querySelector(".loader").style.display = "none";
-      }
+      if (!response.ok) throw new Error("HTTP error " + response.status);
+      const result = await response.json();
+
+      document.querySelector("h2").textContent = "✅ Hoàn tất!";
+      document.getElementById("status").textContent = result.message || "Yêu cầu đã được xử lý thành công.";
+      document.querySelector(".loader").style.display = "none";
+    } catch (error) {
+      document.querySelector("h2").textContent = "❌ Lỗi xảy ra";
+      document.getElementById("status").textContent = "Không thể xử lý yêu cầu: " + error;
+      document.querySelector(".loader").style.display = "none";
     }
+  }
 
-    window.onload = callFlow;
-  </script>
+  window.onload = callFlow;
+</script>
 </body>
 </html>
