--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     document.getElementById("status").textContent = "🚀 Gửi yêu cầu tới hệ thống...";
 
     try {
-      const response = await fetch("https://prod-43.southeastasia.logic.azure.com:443/workflows/1649ab51f4154bdd9ae6d13f340786bf/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun%2F&sv=1.0&sig=YOUR_SIGNATURE_HERE", {
-        method: "POST",
+      const response = await fetch("https://prod-43.southeastasia.logic.azure.com:443/workflows/1649ab51f4154bdd9ae6d13f340786bf/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=U784B54C0Wa-1mGpqN4lkwN_oEY1X6v61KmtLff0t6s", {
+        method: "GET",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ "filters": filters }) // tuỳ chọn
       });
