--- a/refresh-dataset.html
+++ b/refresh-dataset.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Đang làm mới dữ liệu Power BI...</title>
+  <title>Đang làm mới dữ liệu Power BI dataset...</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding-top: 100px; }
     #status { font-size: 1.3em; margin-top: 20px; }
