--- a/refresh-dataset.html
+++ b/refresh-dataset.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="data:,">
   <title>Đang làm mới dữ liệu Power BI dataset...</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding-top: 100px; }
