--- a/refresh-dataset.html
+++ b/refresh-dataset.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="data:,">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
   <title>Đang làm mới dữ liệu Power BI dataset...</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding-top: 100px; }
