--- a/refresh-dataset.html
+++ b/refresh-dataset.html
@@ -73,6 +73,8 @@
         }
 
         const requestId = result.requestId;
+        console.log("Request ID = ", requestId);
+        console.log("response = ",response);
         document.getElementById("status").textContent = result.message || "Yêu cầu đã được gửi đi. Đang theo dõi...";
         pollStatus(requestId);
 
@@ -86,7 +88,10 @@
     function pollStatus(requestId) {
       const interval = setInterval(async () => {
         try {
+          console.log("Polling ",requestId);
+          
           const res = await fetch(`${statusUrl}?requestId=${encodeURIComponent(requestId)}`);
+          console.log("URL = ", `${statusUrl}?requestId=${encodeURIComponent(requestId)}`);
           const data = await res.json();
 
           if (data.status === "Completed") {
