--- a/refresh-dataset.html
+++ b/refresh-dataset.html
@@ -91,8 +91,9 @@
           console.log("Polling ",requestId);
           
           const res = await fetch(`${statusUrl}&requestId=${encodeURIComponent(requestId)}`);
-          console.log("URL = "+ `${statusUrl}&requestId=${encodeURIComponent(requestId)}`);
+          // console.log("URL = "+ `${statusUrl}&requestId=${encodeURIComponent(requestId)}`);
           const data = await res.json();
+          console.log("Response : "+JSON.stringify(data));
 
           if (data.status === "Completed") {
             clearInterval(interval);
